tests/paczka1/small_fuzzy/70606445.err
Error in line 5: A280 A30 74,0
Error in line 7: A280 A280 49,7
Error in line 13: SVI0Lm S887 95,4
Error in line 16: A280 S887 28,86
